# MCP_Salesforce

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/: server.py
src/salesforcemcp/: .env.example  __init__.py  definitions.py  implementations.py  sfdc_client.py
